--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>This is the header</h1>
+        <nav>
+            <nav class="navbar">
+                <div class="okay">
+                    <h1>Home</h1>
+                </div>
+            </nav>
+        </nav>
+        <h1>This is the header lol</h1>
     </body>
 </html>
