--- a/index.html
+++ b/index.html
@@ -9,11 +9,38 @@
     <body>
         <nav>
             <nav class="navbar">
-                <div class="okay">
-                    <h1>Home</h1>
+                <div class="navbar_container">
+                    <a href="/" id="tag">Roger Truong's Portfolio</a>
+                    <div class="navbar_toggle" id="mobile-menu">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+                    <ul class="navbar_menu">
+                        <li class="navbar_item">
+                            <a href="" class="navbar_link">
+                                Home
+                            </a>
+                        </li>
+                        <li class="navbar_item">
+                            <a href="Projects.html" class="navbar_link">
+                                Projects
+                            </a>
+                        </li>
+                        <li class="navbar_item">
+                            <a href="" class="navbar_link">
+                                About Me
+                            </a>
+                        </li>
+                        <li class="navbar_button">
+                            <a href="" class="button">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </nav>
-        <h1>This is the header lol</h1>
+        
     </body>
 </html>
