--- a/index.html
+++ b/index.html
@@ -67,14 +67,27 @@
       <div class="aboutme-btn">
         <div class="biggerbox"></div>
 
-        <div href="/" class="about" id="about">ABOUT ME</div>
-        <div class="line1"></div>
-        <div class="line2"></div>
+        <div href="/" class="about" id="about">⊳ ABOUT ME ⊲</div>
       </div>
+      <div class="line1"></div>
 
-      <div id="aboutme">
-        Welcome to my page! I'm Roger Truong and I am a 2nd year student at UNSW
-        completing a Bachelor's Degree of Computer Science.
+      <div class="line2"></div>
+      <div class="line3"></div>
+
+      <div class="aboutme_appear" id="aboutme">
+        <p>Welcome to my page! I'm Roger Truong and I am a 2nd year student at UNSW
+        completing a Bachelor's Degree of Computer Science.</p>
+        
+        <img class="image" src="images/me1.jpg" alt="Your Image Description">
+      </div>
+      <div class="aboutme_appear" id="aboutme1">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum..
       </div>
       <!-- <div class="white"></div> -->
       <div class="background1">
