--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Roger Truong Codes</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="aboutmedia.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -75,10 +76,7 @@
         <img src="images/minimise.png" alt="" class="minimise" id="minimise1" />
       </button>
 
-      <div class="line1"></div>
-
-      <div class="line2"></div>
-      <div class="line3"></div>
+      
 
       <div class="aboutme_appear" id="aboutme">
         <p>
