--- a/index.html
+++ b/index.html
@@ -95,23 +95,42 @@
           />
         </div>
       </div>
-
+      <!-- <div class="blankSection">hello</div> -->
       <section id="projects">
         <h2>Projects</h2>
-        <p id="maintext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum..
-        </p>
+        <p class="maintext" id="projectText">These are my projects.</p>
+        <div class="projectGrid">
+          <div id="oneOne">
+            Project 1
+            <img src="images/adaw.jpg" alt="" />
+          </div>
+
+          <div id="oneTwo">
+            Project 2
+            <img src="images/adaw.jpg" alt="" />
+          </div>
+          <div id="twoOne">
+            Project 3
+            <img src="images/adaw.jpg" alt="" />
+          </div>
+          <div id="twoTwo">
+            Project 4
+            <img src="images/adaw.jpg" alt="" />
+          </div>
+          <div id="threeOne">
+            Project 5
+            <img src="images/adaw.jpg" alt="" />
+          </div>
+          <div id="threeTwo">
+            Project 6
+            <img src="images/adaw.jpg" alt="" />
+          </div>
+        </div>
       </section>
       <div class="section3"></div>
       <section id="experience">
         <h2>Experience</h2>
-        <p id="maintext">
+        <p class="maintext">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -124,7 +143,7 @@
       <div class="section3"></div>
       <section id="skills">
         <h2>Skills</h2>
-        <p id="maintext">
+        <p class="maintext">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
