--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
     <title>Roger Truong Codes</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="about.css" />
@@ -18,16 +21,19 @@
   <body>
     <!-- Side Navigation Bar -->
 
-    <div class="sidenav">
+    
+
+    <!-- header bar -->
+    
+    <div class="scroll-container">
+      <div class="sidenav">
       <a href="#about">⊳ ABOUT ME</a>
       <a href="#projects">⊳ PROJECTS</a>
       <a href="#experience">⊳ EXPERIENCE</a>
       <a href="#skills">⊳ SKILLS</a>
     </div>
 
-    <nav class="navbar" id="navbarOutline"></nav>
-    <!-- header bar -->
-    <nav class="navbar">
+      <nav class="navbar">
       <div class="navbar_container">
         <a href="/personalwebsite/" id="logo"
           ><b>Roger Truong's Portfolio</b></a
@@ -38,6 +44,7 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
+
         <ul class="navbar_menu">
           <li class="navbar_item">
             <a
@@ -65,100 +72,100 @@
         </ul>
       </div>
     </nav>
+      <!-- Main Content -->
+      <div class="main">
+        <!-- about me button -->
+        <div class="background1">
+          <div class="background">
+            <img src="images/berserk.png" alt="" />
+          </div>
 
-    <!-- Main Content -->
-    <div class="main">
-      <!-- about me button -->
-      <div class="background1">
-        <div class="background">
-          <img src="images/berserk.png" alt="" />
+          <div class="aboutme-btn" id="about">
+            <div href="/" class="about">⊳ ABOUT ME ⊲</div>
+          </div>
+
+          <div class="aboutme_appear" id="aboutSlider1">
+            <p>
+              Welcome to my page! I'm Roger Truong and I am a 2nd year student
+              at UNSW completing a Bachelor's Degree of Computer Science. I'm
+              looking for an opportunity to show my potential and use my skills
+              where it matters.
+            </p>
+          </div>
+          <div class="aboutme_appear1" id="aboutSlider2">
+            <img
+              class="image"
+              src="images/me1.jpg"
+              alt="Your Image Description"
+            />
+          </div>
         </div>
+        <!-- <div class="blankSection">hello</div> -->
+        <section id="projects">
+          <h2>Projects</h2>
+          <p class="maintext" id="projectText">These are my projects.</p>
+          <div class="projectGrid">
+            <div id="oneOne">
+              Project 1
+              <img src="images/adaw.jpg" alt="" />
+            </div>
 
-        <div class="aboutme-btn" id="about">
-          <div href="/" class="about">⊳ ABOUT ME ⊲</div>
-          <div href="/" class="about1">⊳ ABOUT ME ⊲</div>
-        </div>
-
-        <div class="aboutme_appear" id="aboutSlider1">
-          <p>
-            Welcome to my page! I'm Roger Truong and I am a 2nd year student at
-            UNSW completing a Bachelor's Degree of Computer Science. I'm looking
-            for an opportunity to show my potential and use my skills where it
-            matters.
+            <div id="oneTwo">
+              Project 2
+              <img src="images/adaw.jpg" alt="" />
+            </div>
+            <div id="twoOne">
+              Project 3
+              <img src="images/adaw.jpg" alt="" />
+            </div>
+            <div id="twoTwo">
+              Project 4
+              <img src="images/adaw.jpg" alt="" />
+            </div>
+            <div id="threeOne">
+              Project 5
+              <img src="images/adaw.jpg" alt="" />
+            </div>
+            <div id="threeTwo">
+              Project 6
+              <img src="images/adaw.jpg" alt="" />
+            </div>
+          </div>
+        </section>
+        <div class="section3"></div>
+        <section id="experience">
+          <h2>Experience</h2>
+          <p class="maintext">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum..
           </p>
-        </div>
-        <div class="aboutme_appear1" id="aboutSlider2">
-          <img
-            class="image"
-            src="images/me1.jpg"
-            alt="Your Image Description"
-          />
-        </div>
+        </section>
+        <div class="section3"></div>
+        <section id="skills">
+          <h2>Skills</h2>
+          <p class="maintext">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum..
+          </p>
+        </section>
+        <footer>
+    <div class="footer"></div>
+  </footer>
       </div>
-      <!-- <div class="blankSection">hello</div> -->
-      <section id="projects">
-        <h2>Projects</h2>
-        <p class="maintext" id="projectText">These are my projects.</p>
-        <div class="projectGrid">
-          <div id="oneOne">
-            Project 1
-            <img src="images/adaw.jpg" alt="" />
-          </div>
-
-          <div id="oneTwo">
-            Project 2
-            <img src="images/adaw.jpg" alt="" />
-          </div>
-          <div id="twoOne">
-            Project 3
-            <img src="images/adaw.jpg" alt="" />
-          </div>
-          <div id="twoTwo">
-            Project 4
-            <img src="images/adaw.jpg" alt="" />
-          </div>
-          <div id="threeOne">
-            Project 5
-            <img src="images/adaw.jpg" alt="" />
-          </div>
-          <div id="threeTwo">
-            Project 6
-            <img src="images/adaw.jpg" alt="" />
-          </div>
-        </div>
-      </section>
-      <div class="section3"></div>
-      <section id="experience">
-        <h2>Experience</h2>
-        <p class="maintext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum..
-        </p>
-      </section>
-      <div class="section3"></div>
-      <section id="skills">
-        <h2>Skills</h2>
-        <p class="maintext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum..
-        </p>
-      </section>
     </div>
 
     <script src="website.js"></script>
   </body>
 
-  <footer>
-    <div class="footer"></div>
-  </footer>
+  
 </html>
