--- a/index.html
+++ b/index.html
@@ -21,57 +21,55 @@
   <body>
     <!-- Side Navigation Bar -->
 
-    
-
     <!-- header bar -->
-    
+
     <div class="scroll-container">
       <div class="sidenav">
-      <a href="#about">⊳ ABOUT ME</a>
-      <a href="#projects">⊳ PROJECTS</a>
-      <a href="#experience">⊳ EXPERIENCE</a>
-      <a href="#skills">⊳ SKILLS</a>
-    </div>
+        <a href="#about">⊳ ABOUT ME</a>
+        <a href="#projects">⊳ PROJECTS</a>
+        <a href="#experience">⊳ EXPERIENCE</a>
+        <a href="#skills">⊳ SKILLS</a>
+      </div>
 
       <nav class="navbar">
-      <div class="navbar_container">
-        <a href="/personalwebsite/" id="logo"
-          ><b>Roger Truong's Portfolio</b></a
-        >
+        <div class="navbar_container">
+          <a href="/personalwebsite/" id="logo"
+            ><b>Roger Truong's Portfolio</b></a
+          >
 
-        <div class="navbar_toggle" id="mobile-menu">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+          <div class="navbar_toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+
+          <ul class="navbar_menu">
+            <li class="navbar_item">
+              <a
+                href="http://www.linkedin.com/in/roger-truong"
+                target="_blank"
+                class="navbar_link"
+              >
+                LinkedIn
+              </a>
+            </li>
+            <li class="navbar_item">
+              <a
+                href="https://github.com/rogertruong7"
+                target="_blank"
+                class="navbar_link"
+              >
+                GitHub
+              </a>
+            </li>
+            <li class="navbar_item">
+              <a href="contacts.html" target="_blank" class="navbar_link">
+                Contact
+              </a>
+            </li>
+          </ul>
         </div>
-
-        <ul class="navbar_menu">
-          <li class="navbar_item">
-            <a
-              href="http://www.linkedin.com/in/roger-truong"
-              target="_blank"
-              class="navbar_link"
-            >
-              LinkedIn
-            </a>
-          </li>
-          <li class="navbar_item">
-            <a
-              href="https://github.com/rogertruong7"
-              target="_blank"
-              class="navbar_link"
-            >
-              GitHub
-            </a>
-          </li>
-          <li class="navbar_item">
-            <a href="contacts.html" target="_blank" class="navbar_link">
-              Contact
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+      </nav>
       <!-- Main Content -->
       <div class="main">
         <!-- about me button -->
@@ -144,6 +142,20 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum..
           </p>
+          <div class="experience-section">
+            <div class="experience-item" id="experience1">
+              <h2>Experience 1</h2>
+              <p>Description for experience 1.</p>
+            </div>
+            <div class="experience-item" id="experience2">
+              <h2>Experience 2</h2>
+              <p>Description for experience 2.</p>
+            </div>
+            <div class="experience-item" id="experience3">
+              <h2>Experience 3</h2>
+              <p>Description for experience 3.</p>
+            </div>
+          </div>
         </section>
         <div class="section3"></div>
         <section id="skills">
@@ -159,13 +171,11 @@
           </p>
         </section>
         <footer>
-    <div class="footer"></div>
-  </footer>
+          <div class="footer"></div>
+        </footer>
       </div>
     </div>
 
     <script src="website.js"></script>
   </body>
-
-  
 </html>
