videos to projects

--- a/index.html
+++ b/index.html
@@ -101,32 +101,92 @@
         <!-- <div class="blankSection">hello</div> -->
         <section id="projects">
           <h2>Projects</h2>
-          <p class="maintext" id="projectText">These are my projects.</p>
+
           <div class="projectGrid">
-            <div id="oneOne">
-              Project 1
-              <img src="images/adaw.jpg" alt="" />
+            <div class="projectImage">
+              <div class="glassy-filter"></div>
+              <!-- <img src="images/clouds.jpg" alt="" /> -->
+              <video width="" height="360" preload="auto" controls="false" autoplay loop muted>
+                <source src="images/HOTPOT.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
+              <div class="projectText">Discord Gaming Bot</div>
+              <a
+                class="learnMore"
+                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                target="blank"
+              >
+                Learn More
+              </a>
             </div>
 
-            <div id="oneTwo">
-              Project 2
-              <img src="images/adaw.jpg" alt="" />
+            <div class="projectImage" id="oneTwo">
+              <div class="glassy-filter"></div>
+              <!-- <img src="images/clouds.jpg" alt="" /> -->
+              <video width="" height="360" controls autoplay loop muted>
+                <source src="images/HOTPOT.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
+              <div class="projectText">Discord Gaming Bot</div>
+              <a
+                class="learnMore"
+                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                target="blank"
+              >
+                Learn More
+              </a>
             </div>
-            <div id="twoOne">
-              Project 3
-              <img src="images/adaw.jpg" alt="" />
+            <div class="projectImage" id="twoOne">
+              <div class="glassy-filter"></div>
+              <!-- <img src="images/clouds.jpg" alt="" /> -->
+              <video width="" height="360" controls autoplay loop muted>
+                <source src="images/HOTPOT.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
+              <div class="projectText">Discord Gaming Bot</div>
+              <a
+                class="learnMore"
+                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                target="blank"
+              >
+                Learn More
+              </a>
             </div>
-            <div id="twoTwo">
-              Project 4
-              <img src="images/adaw.jpg" alt="" />
+            <div class="projectImage" id="twoTwo">
+              <div class="glassy-filter"></div>
+              <img src="images/clouds.jpg" alt="" />
+              <div class="projectText">Discord Gaming Bot</div>
+              <a
+                class="learnMore"
+                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                target="blank"
+              >
+                Learn More
+              </a>
             </div>
-            <div id="threeOne">
-              Project 5
-              <img src="images/adaw.jpg" alt="" />
+            <div class="projectImage" id="threeOne">
+              <div class="glassy-filter"></div>
+              <img src="images/clouds.jpg" alt="" />
+              <div class="projectText">Discord Gaming Bot</div>
+              <a
+                class="learnMore"
+                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                target="blank"
+              >
+                Learn More
+              </a>
             </div>
-            <div id="threeTwo">
-              Project 6
-              <img src="images/adaw.jpg" alt="" />
+            <div class="projectImage" id="threeTwo">
+              <div class="glassy-filter"></div>
+              <img src="images/clouds.jpg" alt="" />
+              <div class="projectText">Discord Gaming Bot</div>
+              <a
+                class="learnMore"
+                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                target="blank"
+              >
+                Learn More
+              </a>
             </div>
           </div>
         </section>
@@ -142,20 +202,6 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum..
           </p>
-          <div class="experience-section">
-            <div class="experience-item" id="experience1">
-              <h2>Experience 1</h2>
-              <p>Description for experience 1.</p>
-            </div>
-            <div class="experience-item" id="experience2">
-              <h2>Experience 2</h2>
-              <p>Description for experience 2.</p>
-            </div>
-            <div class="experience-item" id="experience3">
-              <h2>Experience 3</h2>
-              <p>Description for experience 3.</p>
-            </div>
-          </div>
         </section>
         <div class="section3"></div>
         <section id="skills">
