added animations to projects, changed the filter ont he video, changed about me section for different media

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <title>Roger Truong Codes</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="aboutmedia.css" />
@@ -62,9 +61,7 @@
               </a>
             </li>
             <li class="navbar_item">
-              <a href="contacts.html" target="_blank" class="navbar_link">
-                Contact
-              </a>
+              <a href="contacts.html" class="navbar_link"> Contact </a>
             </li>
           </ul>
         </div>
@@ -72,7 +69,6 @@
 
       <!-- Main Content -->
       <div class="main">
-
         <!-- About Me Section  -->
         <div class="firstSection">
           <div class="background">
@@ -105,118 +101,123 @@
         </div>
         <!-- Project Section -->
         <section id="projects">
-          <h2>Projects</h2>
+          <h2>PROJECTS</h2>
 
           <div class="projectGrid">
-            <div class="projectImage">
-              <div class="glassy-filter"></div>
+            <div class="projectImage" id="oneOne">
               <div class="projectText">Discord Gaming Bot</div>
               <!-- <img src="images/clouds.jpg" alt="" /> -->
-              <video
-                width=""
-                height="360"
-                preload="auto"
-                controls="false"
-                autoplay
-                playsinline
-                style="pointer-events: none"
-                loop
-                muted
-              >
-                <source src="images/HOTPOT.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
-
-              <a
-                class="learnMore"
-                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
-                target="blank"
-              >
-                Learn More
-              </a>
+              <div class="filter">
+                <video
+                  width=""
+                  height="360"
+                  preload="auto"
+                  controls="false"
+                  playsinline
+                  style="pointer-events: none"
+                  loop
+                  muted
+                  class="video"
+                >
+                  <source src="images/HOTPOT.mp4" type="video/mp4" />
+                  Your browser does not support the video tag.
+                </video>
+                <a
+                  class="learnMore"
+                  href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                  target="blank"
+                >
+                  Learn More
+                </a>
+              </div>
             </div>
 
             <div class="projectImage" id="oneTwo">
               <div class="projectText">Discord Gaming Bot</div>
-              <div class="glassy-filter"></div>
-              <video
-                width=""
-                height="360"
-                preload="auto"
-                controls="false"
-                autoplay
-                playsinline
-                style="pointer-events: none"
-                loop
-                muted
-              >
-                <source src="images/HOTPOT.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
 
-              <a
-                class="learnMore"
-                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
-                target="blank"
-              >
-                Learn More
-              </a>
+              <div class="filter">
+                <video
+                  width=""
+                  height="360"
+                  preload="auto"
+                  controls="false"
+                  playsinline
+                  style="pointer-events: none"
+                  loop
+                  muted
+                  class="video"
+                >
+                  <source src="images/HOTPOT.mp4" type="video/mp4" />
+                  Your browser does not support the video tag.
+                </video>
+                <a
+                  class="learnMore"
+                  href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                  target="blank"
+                >
+                  Learn More
+                </a>
+              </div>
             </div>
             <div class="projectImage" id="twoOne">
-              <div class="glassy-filter"></div>
               <div class="projectText">Discord Gaming Bot</div>
-              <video
-                width=""
-                height="360"
-                preload="auto"
-                controls="false"
-                autoplay
-                playsinline
-                style="pointer-events: none"
-                loop
-                muted
-              >
-                <source src="images/HOTPOT.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
+              <div class="filter">
+                <video
+                  width=""
+                  height="360"
+                  preload="auto"
+                  controls="false"
+                  playsinline
+                  style="pointer-events: none"
+                  loop
+                  muted
+                  class="video"
+                >
+                  <source src="images/HOTPOT.mp4" type="video/mp4" />
+                  Your browser does not support the video tag.
+                </video>
 
-              <a
-                class="learnMore"
-                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
-                target="blank"
-              >
-                Learn More
-              </a>
+                <a
+                  class="learnMore"
+                  href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                  target="blank"
+                >
+                  Learn More
+                </a>
+              </div>
             </div>
             <div class="projectImage" id="twoTwo">
               <div class="projectText">Discord Gaming Bot</div>
-              <div class="glassy-filter"></div>
-              <video
-                width=""
-                height="360"
-                preload="auto"
-                controls="false"
-                autoplay
-                playsinline
-                style="pointer-events: none"
-                loop
-                muted
-              >
-                <source src="images/HOTPOT.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-              </video>
 
-              <a
-                class="learnMore"
-                href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
-                target="blank"
-              >
-                Learn More
-              </a>
+              <div class="filter">
+                <video
+                  width=""
+                  height="360"
+                  preload="auto"
+                  controls="false"
+                  playsinline
+                  style="pointer-events: none"
+                  loop
+                  muted
+                  class="video"
+                >
+                  <source src="images/HOTPOT.mp4" type="video/mp4" />
+                  Your browser does not support the video tag.
+                </video>
+
+                <a
+                  class="learnMore"
+                  href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                  target="blank"
+                >
+                  Learn More
+                </a>
+              </div>
             </div>
           </div>
         </section>
-        <div class="section3"></div>
+
+        <!-- Experience Section -->
         <section id="experience">
           <h2>Experience</h2>
           <p class="maintext">
@@ -228,8 +229,29 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum..
           </p>
+          <br />
+          <p class="maintext">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum..
+          </p>
+          <br />
+          <p class="maintext">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum..
+          </p>
         </section>
-        <div class="section3"></div>
+
+        <!-- Skills Section  -->
         <section id="skills">
           <h2>Skills</h2>
           <p class="maintext">
@@ -242,6 +264,7 @@
             culpa qui officia deserunt mollit anim id est laborum..
           </p>
         </section>
+
         <!-- Footer Section -->
         <div class="footer__container">
           <div class="footer__link--items">
@@ -253,11 +276,12 @@
               <li><a href="/">Resume</a></li>
             </ul>
           </div>
-
           <p class="website__rights">© RT 2024. All rights reserved</p>
         </div>
       </div>
+      <!-- main div -->
     </div>
+    <!-- scroll container div -->
     <script src="website.js"></script>
   </body>
 </html>
