--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
         <div class="footer__container">
           <div class="footer__link--items">
             <ul>
-              <li><a href="/">Instagram</a></li>
-              <li><a href="/">Facebook</a></li>
-              <li><a href="/">GitHub</a></li>
-              <li><a href="/">LinkedIn</a></li>
+              <li><a href="https://www.instagram.com/rogrtru/?hl=en">Instagram</a></li>
+              <li><a href="https://www.facebook.com/RogerTruong0/">Facebook</a></li>
+              <li><a href="https://github.com/rogertruong7">GitHub</a></li>
+              <li><a href="https://www.linkedin.com/in/roger-truong/">LinkedIn</a></li>
               <li><a href="/">Resume</a></li>
             </ul>
           </div>
