--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
         </div>
         <!-- Project Section -->
         <section id="projects">
-          <h2>PROJECTS</h2>
-
+          <h2 id="projectT">PROJECTS</h2>
           <div class="projectGrid">
             <div class="projectImage" id="oneOne">
               <div class="projectText">Discord Gaming Bot</div>
