--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
+    <link rel="icon" href="images/heart.png" type="image/x-icon">
+<link rel="shortcut icon" href="images/heart.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="aboutmedia.css" />
