--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <h2 id="projectT">PROJECTS</h2>
           <div class="projectGrid">
             <div class="projectImage" id="oneOne">
-              <div class="projectText">Discord Gaming Bot</div>
+              <div class="projectText">Discord Economy Bot</div>
               <!-- <img src="images/clouds.jpg" alt="" /> -->
               <div class="filter">
                 <video
